--- a/css/stilo.css
+++ b/css/stilo.css
@@ -14,8 +14,8 @@ html {
 #divzapzap {
     width: 100%;
     background-color: #39890f;
-    line-height: 80px;
-    font-size: 18px;
+    line-height: 60px;
+    font-size: 14px;
     color: #FFF;
     float: left;
     text-align: center;
@@ -24,8 +24,8 @@ html {
 #divlocalizacao {
     width: 100%;
     background-color: #8e2727;
-    line-height: 80px;
-    font-size: 18px;
+    line-height: 60px;
+    font-size: 14px;
     color: #FFF;
     float: left;
     text-align: center;
@@ -33,9 +33,9 @@ html {
 
 #divtel {
     width: 100%;
-    background-color: #544f7b;
-    line-height: 80px;
-    font-size: 18px;
+    background-color: rgb(83, 95, 100);
+    line-height: 60px;
+    font-size: 14px;
     color: #FFF;
     float: left;
     text-align: center;
@@ -44,9 +44,9 @@ html {
 
 #divcompartilhar {
     width: 100%;
-    background-color: #002560;
-    line-height: 80px;
-    font-size: 18px;
+    background-color: #5d8faf;
+    line-height: 60px;
+    font-size: 14px;
     color: #FFF;
     float: left;
     text-align: center;
@@ -54,9 +54,9 @@ html {
 }
 .site {
     width: 100%;
-    background-color: #CD8733;
-    line-height: 80px;
-    font-size: 18px;
+    background-color: #cb8f48;
+    line-height: 60px;
+    font-size: 14px;
     color: #fff;
     float: left;
     text-align: center;
@@ -66,8 +66,8 @@ html {
 .propaganda {
     width: 100%;
     background-color: #ffffff;
-    line-height: 80px;
-    font-size: 18px;
+    line-height: 60px;
+    font-size: 14px;
     color: #030303;
     float: left;
     text-align: center;
